// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BannerNotification/> rendering should render close icon when the notification is closable 1`] = `
<div
  class="banner-notification banner-notification--active banner-notification--success banner-notification--clickable"
>
  <span
    class="banner-notification-message"
  >
    foobar
  </span>
  <span
    class="banner-notification-message__close"
  >
    <span>
      <i
        class="material-icons"
      >
        close
      </i>
    </span>
  </span>
</div>
`;

exports[`<BannerNotification/> rendering should render html message 1`] = `
<div
  class="banner-notification banner-notification--active banner-notification--success banner-notification--clickable"
>
  <span
    class="banner-notification-message"
  >
    <div
      class="potatoes"
    >
      patatas bravas
    </div>
  </span>
</div>
`;

exports[`<BannerNotification/> rendering should render with default props 1`] = `
<div
  class="banner-notification banner-notification--active banner-notification--success banner-notification--clickable"
>
  <span
    class="banner-notification-message"
  >
    foobar
  </span>
</div>
`;
